# Supplement_Physics_Residual-Bounded_LSTM

./: .gitignore  README.md  pyproject.toml
configuration/: pelican.json  ship.json
scripts/: run_experiment_pelican.py  run_experiment_ship_ind.py  run_experiment_ship_ood.py  summarize_results.py  summarize_threshold_results.py
